{{$NEXT}}

    - Merged saveas and save into a new to_file method.  The old names are
      deprecated but will continue to work.

    - Renamed stringify to to_string.  The old name is deprecated but will
      continue to work.

    - Created a convenience method $pdf->font, which combines corefont, ttfont,
      psfont, and bdfont.  The type-specific methods have not been deprecated.

    - Replaced $pdf->preferences() with separate page_mode, page_layout,
      viewer_preferences, and open_action methods, all of which are now fully
      documented.  The old method is deprecated but will continue to work.

    - Added font_path and set_font_path accessors for the font search path (the
      list of directories searched when a font name is included without its full
      path).  Renamed addFontDirs to add_to_font_path.  The old name is
      deprecated but will continue to work.

    - Removed C:/WinNT/Fonts from the default font search path.

    - Named Destinations are now fully documented, with updated method names and
      arguments.  The old method names and arguments are deprecated but will
      continue to work.


2.041     2021-07-27

    - Bug reports should now be made at GitHub Issues rather than RT.

    - Rename openpage to open_page in PDF::API2.  The old name is deprecated.

    - [RT #136648] Fix when writing PDFs containing cross-reference streams
      (reported by Chris Papademetrious, fix by Vadim Repin from RT #117184).

    - [RT #44877] GIFs containing comments or plain-text representations will no
      longer result in an error (reported by Chris Czub).

    - [RT #132844] Fix corruption when a PGM image is included (reported by Jeff
      Ratcliffe, fix by Vadim Repin).

    - Expand PNM support to include all image types.

    - [RT #131657] Disable recursion warnings while releasing (destroying) PDF
      indirect objects, which can be highly-interconnected (reported by Leon
      Winter).
