@@ -9,6 +9,10 @@
     - Created a convenience method $pdf->font, which combines corefont, ttfont,
       psfont, and bdfont.  The type-specific methods have not been deprecated.
 
+    - Tentatively deprecated $pdf->cjkfont.  If you're successfully using this
+      method for CJK font support, read PDF::API2::Resource::CIDFont::CJKFont
+      and contact me to discuss your use case.
+
     - Replaced $pdf->preferences() with separate page_mode, page_layout,
       viewer_preferences, and open_action methods, all of which are now fully
       documented.  The old method is deprecated but will continue to work.
